// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BtnAdd /> should render a default add-button 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render a disabled add-button 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--disabled"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render a left-positioned add-button 1`] = `
<div
  className="orizzonte__btn-wrapper orizzonte__btn-wrapper--left"
>
  <button
    className="orizzonte__btn orizzonte__btn-add"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render an add-button that is (always) shown 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--shown"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render an add-button with expanded list of available filters 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--shown"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
  <OrizzonteList
    clearBtn={false}
    clearBtnLabel={null}
    doneBtn={true}
    doneBtnLabel={null}
    isFilterGroup={false}
    items={
      Array [
        <a
          className="orizzonte__item-clickable"
          href="#"
          onClick={[Function]}
        >
          Filter 1
        </a>,
        <a
          className="orizzonte__item-clickable"
          href="#"
          onClick={[Function]}
        >
          Filter 2
        </a>,
      ]
    }
    onApply={[Function]}
    onClear={[Function]}
    onUpdate={[Function]}
    orientation="right"
    values={Object {}}
  />
</div>
`;
